force-app/main/default/objects/Contract/fields/DateFrom__c.field-meta.xml
<CustomField>
    <fullName>DateFrom__c</fullName>
    <formula>LPAD(TEXT(DAY(StartDate)), 2, &quot;0&quot;) + &apos;.&apos; + LPAD(TEXT(MONTH(StartDate)), 2, &quot;0&quot;) + &apos;.&apos; + TEXT(YEAR(StartDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Дата від</label>
    <type>Text</type>
</CustomField>