force-app/main/default/objects/Contract/fields/DateTo__c.field-meta.xml
<CustomField>
    <fullName>DateTo__c</fullName>
    <formula>LPAD(TEXT(DAY(EndDate__c)), 2, &quot;0&quot;) + &apos;.&apos; + LPAD(TEXT(MONTH(EndDate__c)), 2, &quot;0&quot;) + &apos;.&apos; + TEXT(YEAR(EndDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Дата по</label>
    <type>Text</type>
</CustomField>