force-app/main/default/objects/Contract/fields/DogN__c.field-meta.xml
<CustomField>
    <fullName>DogN__c</fullName>
    <formula>&apos;Угода № &apos; + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Угода №</label>
    <type>Text</type>
</CustomField>