force-app/main/default/objects/Contract/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Активна</label>
    <type>Checkbox</type>
</CustomField>