force-app/main/default/objects/Contract/fields/IsSupplier__c.field-meta.xml
<CustomField>
    <fullName>IsSupplier__c</fullName>
    <formula>Account.IsSupplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsSupplier</label>
    <type>Checkbox</type>
</CustomField>