force-app/main/default/objects/Contract/fields/ScrapSupplierType__c.field-meta.xml
<CustomField>
    <fullName>ScrapSupplierType__c</fullName>
    <formula>Account.ScrapSupplierType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Тип постачальника</label>
    <type>Text</type>
</CustomField>