force-app/main/default/objects/Contract/fields/WillBeActive__c.field-meta.xml
<CustomField>
    <fullName>WillBeActive__c</fullName>
    <formula>IF(EndDate__c &gt;= TODAY(), EndDate__c - TODAY(), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Буде чинною, днів</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>