force-app/main/default/objects/Contract/recordTypes/MasterPosition.recordType-meta.xml
<RecordType>
    <fullName>MasterPosition</fullName>
    <active>true</active>
    <label>MasterPosition</label>
</RecordType>